Improvised GUI - Dynamic Machine Adding/Removal Server Client connect through flv

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,15 +33,15 @@ file.reference.jna-3.5.2.jar-1=jna-3.5.2.jar
 file.reference.log4j.jar=F:\\IntelliJ IDEA Community Edition 15.0.2\\lib\\log4j.jar
 file.reference.platform-3.5.2.jar-1=platform-3.5.2.jar
 file.reference.slf4j-api-1.7.10.jar-1=slf4j-api-1.7.10.jar
-file.reference.vlcj-3.8.0.jar-1=vlcj-3.8.0.jar
+file.reference.vlcj-3.10.1.jar=C:\\Users\\Aditya Rathi\\Desktop\\vlcj-3.10.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jna-3.5.2.jar-1}:\
     ${file.reference.platform-3.5.2.jar-1}:\
     ${file.reference.slf4j-api-1.7.10.jar-1}:\
-    ${file.reference.vlcj-3.8.0.jar-1}:\
-    ${file.reference.log4j.jar}
+    ${file.reference.log4j.jar}:\
+    ${file.reference.vlcj-3.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -65,7 +65,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=cats_project.ServerSidePanel
+main.class=cats_project.ServerSidePanelFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
