--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jna-3.5.2.jar-1=jna-3.5.2.jar
+file.reference.log4j-1.2.17.jar=C:\\Users\\Aditya Rathi\\Desktop\\log4j-1.2.17.jar
 file.reference.log4j.jar=F:\\IntelliJ IDEA Community Edition 15.0.2\\lib\\log4j.jar
 file.reference.platform-3.5.2.jar-1=platform-3.5.2.jar
 file.reference.slf4j-api-1.7.10.jar-1=slf4j-api-1.7.10.jar
@@ -41,7 +42,8 @@ javac.classpath=\
     ${file.reference.platform-3.5.2.jar-1}:\
     ${file.reference.slf4j-api-1.7.10.jar-1}:\
     ${file.reference.log4j.jar}:\
-    ${file.reference.vlcj-3.10.1.jar}
+    ${file.reference.vlcj-3.10.1.jar}:\
+    ${file.reference.log4j-1.2.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
